--- a/index.html
+++ b/index.html
@@ -15,10 +15,20 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#000000">
   </head>
 
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker.register("/service-worker.js")
+          .then(() => console.log("Service Worker registrado com sucesso."))
+          .catch((error) => console.error("Falha ao registrar o Service Worker:", error));
+      }
+    </script>
   </body>
 </html>
