--- a/index.html
+++ b/index.html
@@ -18,10 +18,38 @@
 
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#000000">
+
+    <style>
+      .install-button {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        background-color: #ff9800;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        padding: 10px 20px;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        transition: background-color 0.3s ease;
+      }
+
+      .install-button:hover {
+        background-color: #e68900;
+      }
+
+      .install-button:active {
+        background-color: #cc7a00;
+      }
+    </style>
   </head>
 
   <body>
     <div id="root"></div>
+    <button id="install-button" class="install-button">Adicionar a Ilha na Home</button>
     <script type="module" src="/src/main.tsx"></script>
     <script>
       if ("serviceWorker" in navigator) {
@@ -29,6 +57,43 @@
           .then(() => console.log("Service Worker registrado com sucesso."))
           .catch((error) => console.error("Falha ao registrar o Service Worker:", error));
       }
+
+      let deferredPrompt;
+
+      window.addEventListener("beforeinstallprompt", (event) => {
+        console.log("Evento beforeinstallprompt disparado.");
+        event.preventDefault();
+        deferredPrompt = event;
+
+        if (installButton) {
+          console.log("Exibindo botão de instalação.");
+          installButton.style.display = "block";
+          installButton.addEventListener("click", () => {
+            console.log("Botão de instalação clicado.");
+            installButton.style.display = "none";
+            deferredPrompt.prompt();
+            deferredPrompt.userChoice.then((choiceResult) => {
+              if (choiceResult.outcome === "accepted") {
+                console.log("Usuário aceitou instalar o PWA.");
+              } else {
+                console.log("Usuário recusou instalar o PWA.");
+              }
+              deferredPrompt = null;
+            });
+          });
+        }
+      });
+
+      window.addEventListener("appinstalled", () => {
+        console.log("PWA foi instalado com sucesso!");
+        const installButton = document.getElementById("install-button");
+        if (installButton) {
+          installButton.style.display = "none";
+        }
+      });
+
+      // Log para verificar se o evento está sendo perdido
+      console.log("Script carregado e aguardando evento beforeinstallprompt.");
     </script>
   </body>
 </html>
