--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         display: none;
         position: fixed;
         bottom: 20px;
-        right: 20px;
+        left: 50%;
+        transform: translateX(-50%);
         background-color: #ff9800;
         color: white;
         border: none;
